--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color:#4b9bf2">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top" style="color:white">Elizabeth Gieske</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -61,9 +61,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+         <div class="intro-lead-in" style="opacity: 0.0;">Welcome To Our Studio!</div>
+          <div class="intro-heading text-uppercase" style="opacity: 0.0;">It's Nice To Meet You</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="opacity: 0.0;">Tell Me More</a>
         </div>
       </div>
     </header>
@@ -123,11 +123,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/final_render_small.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Threads</h4>
-              <p class="text-muted">Illustration</p>
+              <h4>Desk Scene</h4>
+              <p class="text-muted">3D Modelling</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -137,11 +137,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/chess_small.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Explore</h4>
-              <p class="text-muted">Graphic Design</p>
+              <h4>Chess Game</h4>
+              <p class="text-muted">Software: GUI and AI</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -151,11 +151,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/home_small.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Finish</h4>
-              <p class="text-muted">Identity</p>
+              <h4>SmartShopper</h4>
+              <p class="text-muted">App Design</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -165,11 +165,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/atla_small.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Lines</h4>
-              <p class="text-muted">Branding</p>
+              <h4>Females in TV</h4>
+              <p class="text-muted">Digital Design</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -179,10 +179,10 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/dash_small.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Southwest</h4>
+              <h4>Dashboard</h4>
               <p class="text-muted">Website Design</p>
             </div>
           </div>
@@ -193,11 +193,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/tutor.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Window</h4>
-              <p class="text-muted">Photography</p>
+              <h4>LOGIC</h4>
+              <p class="text-muted">Software Development</p>
             </div>
           </div>
         </div>
@@ -454,7 +454,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; Elizabeth Gieske 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
@@ -475,16 +475,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-            </ul>
-          </div>
+
         </div>
       </div>
     </footer>
@@ -645,11 +636,11 @@
                   <hr>
                   <p class="item-intro" style="float:left;">Before</p>
                   <hr>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/ge_before.png" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/dash_before_mod.png" alt="">
                   <hr>
                   <p class="item-intro" style="float:left;">After</p>
                   <hr>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/ge_after.png" alt="">
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/ge_after_mod.png" alt="">
                   <p>Originally, the dashboard was flat and unappealing. Elizabeth added styling to create a better user experience.
                   The dashboard also holds more information as requested by the stakeholder. The new version includes a mobile version
                   with cards displayed in a collapsible accordion while the previous version was not compatible with smaller screens.
