--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="nav-link js-scroll-trigger" href="#team">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link" href="img/Gieske_Resume.pdf" download>Resume</a>
             </li>
           </ul>
         </div>
